force-app/main/default/objects/Imovel__c/Imovel__c.object-meta.xml
<CustomObject>
    <description>Imoveis disponiveis</description>
    <label>Imovel</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>ID do Imovel</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Imoveis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>