force-app/main/default/objects/Imovel__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Adicione a cidade.</description>
    <inlineHelpText>Adicione a cidade.</inlineHelpText>
    <label>Cidade</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>