force-app/main/default/objects/Imovel__c/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <description>verificaçao tipo de aluguel</description>
    <formula>IF(Rental_Value__c &lt;= 2000.00,
    &quot;tipo C&quot;,
    IF(Rental_Value__c &lt;= 3000.00,
        &quot;tipo B&quot;,
        IF(Rental_Value__c &lt;= 4000.00,
            &quot;tipo A&quot;,
            &quot;Fora do valor padrao&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>verificaçao tipo de aluguel</inlineHelpText>
    <label>Tipo de Cliente</label>
    <type>Text</type>
</CustomField>