force-app/main/default/objects/Imovel__c/fields/Cliente_Imovel__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Imovel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente_Imovel</label>
    <referenceTo>Cliente_Imovel__c</referenceTo>
    <relationshipLabel>Imoveis</relationshipLabel>
    <relationshipName>Imoveis</relationshipName>
    <type>Lookup</type>
</CustomField>