force-app/main/default/objects/Imovel__c/fields/Condominium_Fee__c.field-meta.xml
<CustomField>
    <fullName>Condominium_Fee__c</fullName>
    <description>Informe o valor da taxa de condominio.</description>
    <inlineHelpText>Informe o valor da taxa de condominio.</inlineHelpText>
    <label>Valor Condominio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>