force-app/main/default/objects/Imovel__c/fields/Cost_of_Sales__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Sales__c</fullName>
    <formula>( sale_value__c -  sale_with_discount__c )+  real_estate_tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custo_de_Venda_Imovel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>