force-app/main/default/objects/Imovel__c/fields/Days_for_renovation_contract_rental__c.field-meta.xml
<CustomField>
    <fullName>Days_for_renovation_contract_rental__c</fullName>
    <description>quanyidade</description>
    <formula>Rental_Contract__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias_para_renovacao_contrato_aluguel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>