force-app/main/default/objects/Imovel__c/fields/Delivery_date_after_sale_of_the_property__c.field-meta.xml
<CustomField>
    <fullName>Delivery_date_after_sale_of_the_property__c</fullName>
    <description>Data prevista de entrega apos venda.</description>
    <formula>ADDMONTHS( Sale_Date__c, 1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Data prevista de entrega apos venda.</inlineHelpText>
    <label>Data de entrega após venda do imóvel</label>
    <type>Date</type>
</CustomField>