force-app/main/default/objects/Imovel__c/fields/Discount_in_cash__c.field-meta.xml
<CustomField>
    <fullName>Discount_in_cash__c</fullName>
    <description>valor de desconto para pagamento de compra a vista.</description>
    <inlineHelpText>valor de desconto para pagamento de compra a vista.</inlineHelpText>
    <label>Desconto_a_vista</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>