force-app/main/default/objects/Imovel__c/fields/financing__c.field-meta.xml
<CustomField>
    <fullName>financing__c</fullName>
    <description>Selecione o tipo de financiamento.</description>
    <inlineHelpText>Selecione o tipo de financiamento.</inlineHelpText>
    <label>financiamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>À VISTA</fullName>
            </value>
            <value>
                <fullName>CEF</fullName>
            </value>
            <value>
                <fullName>BRADESCO</fullName>
            </value>
            <value>
                <fullName>BANCO DO BRASIL</fullName>
            </value>
            <value>
                <fullName>ITAÚ</fullName>
            </value>
            <value>
                <fullName>SANTANDER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>