force-app/main/default/objects/Imovel__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <description>Adicione o endereço do imovel.</description>
    <inlineHelpText>Adicione o endereço do imovel.</inlineHelpText>
    <label>Endereco_do_Imovel</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>