force-app/main/default/objects/Imovel__c/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <description>Escreva o nome do imovel.</description>
    <label>Nome do Imovel</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>