force-app/main/default/objects/Imovel__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <description>Selecione o tipo do imovel.</description>
    <inlineHelpText>Selecione o tipo do imovel.</inlineHelpText>
    <label>Tipo de Imovel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casa</fullName>
            </value>
            <value>
                <fullName>Apartamento</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Quitinete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>