force-app/main/default/objects/Imovel__c/fields/Proprietario__c.field-meta.xml
<CustomField>
    <fullName>Proprietario__c</fullName>
    <description>Proprietario do Imovel</description>
    <label>Proprietario</label>
    <referenceTo>Proprietario__c</referenceTo>
    <relationshipLabel>Imoveis</relationshipLabel>
    <relationshipName>Imoveis</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>