force-app/main/default/objects/Imovel__c/fields/real_estate_tax__c.field-meta.xml
<CustomField>
    <fullName>real_estate_tax__c</fullName>
    <formula>sale_value__c  * 0.08</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxa Imobiliaria</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>