force-app/main/default/objects/Imovel__c/fields/Rental__c.field-meta.xml
<CustomField>
    <fullName>Rental__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selecione caso o imovel seja para aluguel.</description>
    <inlineHelpText>Selecione caso o imovel seja para aluguel.</inlineHelpText>
    <label>Aluguel</label>
    <type>Checkbox</type>
</CustomField>