force-app/main/default/objects/Imovel__c/fields/Rental_Contract__c.field-meta.xml
<CustomField>
    <fullName>Rental_Contract__c</fullName>
    <description>Vencimento Contrato de locação.</description>
    <formula>ADDMONTHS( rental_date__c ,12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Vencimento Contrato de locação.</inlineHelpText>
    <label>Contrato do Aluguel</label>
    <type>Date</type>
</CustomField>