force-app/main/default/objects/Imovel__c/fields/rental_date__c.field-meta.xml
<CustomField>
    <fullName>rental_date__c</fullName>
    <description>Informe a data de locação.</description>
    <inlineHelpText>Informe a data de locação.</inlineHelpText>
    <label>Data de Locacao</label>
    <type>Date</type>
</CustomField>