force-app/main/default/objects/Imovel__c/fields/Rental_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Rental_Payment_Method__c</fullName>
    <description>Selecione o metodo de locação.</description>
    <inlineHelpText>Selecione o metodo de locação.</inlineHelpText>
    <label>Forma de Pagamento Aluguel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Com Fiador</fullName>
            </value>
            <value>
                <fullName>Com Depósito Caução</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>