force-app/main/default/objects/Imovel__c/fields/Rental_Value__c.field-meta.xml
<CustomField>
    <fullName>Rental_Value__c</fullName>
    <description>Informe o valor do aluguel.</description>
    <inlineHelpText>Informe o valor do aluguel.</inlineHelpText>
    <label>Valor Aluguel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>