force-app/main/default/objects/Imovel__c/fields/Sale__c.field-meta.xml
<CustomField>
    <fullName>Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selecione o campo caso seja venda.</description>
    <inlineHelpText>Selecione o campo caso seja venda.</inlineHelpText>
    <label>Venda</label>
    <type>Checkbox</type>
</CustomField>