force-app/main/default/objects/Imovel__c/fields/Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Date__c</fullName>
    <description>Escreva a data de venda.</description>
    <inlineHelpText>Escreva a data de venda.</inlineHelpText>
    <label>Data de Venda</label>
    <type>Date</type>
</CustomField>