force-app/main/default/objects/Imovel__c/fields/sale_value__c.field-meta.xml
<CustomField>
    <fullName>sale_value__c</fullName>
    <description>valor da venda</description>
    <inlineHelpText>valor da venda</inlineHelpText>
    <label>Valor Venda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>