force-app/main/default/objects/Imovel__c/fields/sale_with_discount__c.field-meta.xml
<CustomField>
    <fullName>sale_with_discount__c</fullName>
    <description>Valor de venda com desconto aplicado.</description>
    <formula>sale_value__c - (sale_value__c  *  Discount_in_cash__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valor de venda com desconto aplicado.</inlineHelpText>
    <label>venda_com_desconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>