force-app/main/default/objects/Imovel__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cadastro</fullName>
            </value>
            <value>
                <fullName>Visitação</fullName>
            </value>
            <value>
                <fullName>Negociação</fullName>
            </value>
            <value>
                <fullName>Documentação</fullName>
            </value>
            <value>
                <fullName>Finalizado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>