force-app/main/default/objects/Imovel__c/fields/Tax_Value__c.field-meta.xml
<CustomField>
    <fullName>Tax_Value__c</fullName>
    <label>Valor IPTU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>