force-app/main/default/objects/Imovel__c/fields/total_monthly_rent_value__c.field-meta.xml
<CustomField>
    <fullName>total_monthly_rent_value__c</fullName>
    <description>Valor total do aluguel.</description>
    <formula>Rental_Value__c +  Condominium_Fee__c +  Tax_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valor total do aluguel.</inlineHelpText>
    <label>valor_total_mensal_aluguel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>