force-app/main/default/objects/Imovel__c/fields/Value_Receipt_post_sale__c.field-meta.xml
<CustomField>
    <fullName>Value_Receipt_post_sale__c</fullName>
    <formula>sale_value__c -  Cost_of_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor_Recebimento_pos_venda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>