force-app/main/default/objects/Imovel__c/fields/Value_Receipt_post_sale_without_discoun__c.field-meta.xml
<CustomField>
    <fullName>Value_Receipt_post_sale_without_discoun__c</fullName>
    <formula>sale_value__c -  real_estate_tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor_Recebimento_pos_venda_sem_desconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>