force-app/main/default/objects/Imovel__c/fields/Value_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Value_Warranty__c</fullName>
    <formula>IF(ISPICKVAL(Rental_Payment_Method__c, &quot;Com Depósito Caução&quot;), 
Rental_Value__c * 2, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor_Caucao</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>