force-app/main/default/objects/Imovel__c/recordTypes/Aluguel.recordType-meta.xml
<RecordType>
    <fullName>Aluguel</fullName>
    <active>true</active>
    <label>Aluguel</label>
</RecordType>